# triggerbox

./: .gitignore  CMakeLists.txt  LICENSE-APACHE  LICENSE-MIT  README.md  mainpage.dox  manifest.xml  package.xml  rosdep.yaml  setup.py  stack.xml  synchronization.md
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  rust.yml
braid-triggerbox-rs/: Cargo.toml
braid-triggerbox-rs/braid-triggerbox-comms/: Cargo.toml
braid-triggerbox-rs/braid-triggerbox-comms/src/: lib.rs
braid-triggerbox-rs/src/: arduino_udev.rs  lib.rs
circuit_board/: triggerbox.brd  triggerbox.fzz  triggerbox.lib  triggerbox.pro  triggerbox.sch
circuit_board/trigger_gerbers_1/: triggerbox-Front.gtl  triggerbox-Mask_Back.gbs  triggerbox-Mask_Front.gts
enclosure/: Makefile  dxf_input.py  make_enclosure.py
examples/: aout_test.py  aout_test_volts.py
firmware/triggerbox/: .gitignore  Makefile  Makefile.nano  Makefile.uno  README.md  README.rst  triggerbox.ino
hardware_v1/circuit_board/: triggerbox.net
hardware_v1/circuit_board/trigger_gerbers_1/: triggerbox-Back.gbl  triggerbox-PCB_Edges.gbr  triggerbox-SilkS_Front.gto  triggerbox.drl
hardware_v1/enclosure/: Makefile
hardware_v1/enclosure/rendered/: enclosure_assembly.scad  enclosure_assembly.stl
hardware_v2/circuit_board/: triggerbox-cache.lib  triggerbox.kicad_pcb  triggerbox.net  triggerbox.pro  triggerbox.sch
hardware_v2/circuit_board/trigger_gerbers_2/: triggerbox-B_Mask.gbs  triggerbox-B_Paste.gbp  triggerbox-B_SilkS.gbo  triggerbox-Back.gbl  triggerbox-Edge_Cuts.gm1  triggerbox-F_Mask.gts  triggerbox-F_Paste.gtp  triggerbox-F_SilkS.gto  triggerbox-Front.gtl  triggerbox-NPTH.drl  triggerbox-PTH.drl
hardware_v2/enclosure/: base_175.stl  base_200.stl  body.ipt  cover.stl
hardware_v3/braid-triggerbox-firmware-pico/: Cargo.toml  README.md
hardware_v3/braid-triggerbox-firmware-pico/.github/workflows/: ci_checks.yml
hardware_v3/braid-triggerbox-firmware-pico/src/: main.rs
hardware_v3/braid-triggerbox-firmware-pico/t2comms/: Cargo.toml
hardware_v3/braid-triggerbox-firmware-pico/t2comms/src/: lib.rs
msg/: AOutConfirm.msg  AOutRaw.msg  AOutVolts.msg  TriggerClockMeasurement.msg  TriggerClockModel.msg
nodes/: triggerbox_client  triggerbox_host
scripts/: set-framerate  set-name
src/triggerbox/: api.py  time_model.py  triggerbox_client.py  triggerbox_device.py  triggerbox_host.py
