<?xml version="1.0"?>
<package>
  <name>triggerbox</name>
  <version>0.0.1</version>
  <description>The triggerbox package</description>

  <maintainer email="strawman@astraw.com">Andrew Straw</maintainer>


  <license>BSD</license>


  <url type="website">https://github.com/strawlab/triggerbox</url>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rosmsg</build_depend>
  <build_depend>python-serial</build_depend>
  <build_depend>arduino-mk</build_depend>
  <build_depend>arduino-udev</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rosmsg</run_depend>
  <run_depend>python-serial</run_depend>
  <run_depend>arduino-mk</run_depend>
  <run_depend>arduino-udev</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
