<package>
  <name>triggerbox</name>
  <version>0.0.1</version>
  <description>
     triggerbox
  </description>
  <author>Andrew Straw</author>
  <maintainer email="strawman@astraw.com">Andrew Straw</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>

  <run_depend>python-serial</run_depend>
  <run_depend>arduino-mk</run_depend>
  <run_depend>arduino-udev</run_depend>
  
</package>
