[package]
name = "braid-triggerbox"
version = "0.3.2"
authors = ["Andrew Straw <strawman@astraw.com>"]
license = "MIT/Apache-2.0"
description = "camera synchronization trigger box for Braid"
edition = "2021"
rust-version = "1.58"

[dependencies]
thiserror = "1"
anyhow = "1.0"
tokio = {version="1.0.1", default-features=false, features=["sync","macros","time","io-util","rt-multi-thread"]}
tokio-serial = "5.4.1"
log = "0.4"
byteorder = "1"
serde = "1.0"
nalgebra = "0.30"
chrono = "0.4"
lstsq = "0.3"
structopt = "0.3"
env_logger = "0.9"
crc = "2.1"

braid-triggerbox-comms = {version="0.1", path="braid-triggerbox-comms"}

[workspace]
members = [
    "braid-triggerbox-comms",
]
