[package]
name = "braid-triggerbox"
version = "0.4.0"
authors = ["Andrew Straw <strawman@astraw.com>"]
license = "MIT/Apache-2.0"
description = "camera synchronization trigger box for Braid"
edition = "2021"
rust-version = "1.58"

[dependencies]
thiserror = "1"
anyhow = "1.0"
tokio = {version="1.0.1", default-features=false, features=["sync","macros","time","io-util","rt-multi-thread"]}
tokio-serial = "5.4.3"
log = "0.4"
byteorder = "1"
serde = "1.0"
nalgebra = "0.31"
chrono = "0.4"
lstsq = "0.4"
env_logger = "0.10"
crc = "3.0"
clap = {version="4.0.10", features=["derive"]}

braid-triggerbox-comms = {version="0.1", path="braid-triggerbox-comms"}

[workspace]
members = [
    "braid-triggerbox-comms",
]
