[package]
name = "braid-triggerbox-comms"
version = "0.1.0"
authors = ["Andrew Straw <strawman@astraw.com>"]
license = "MIT/Apache-2.0"
edition = "2021"
rust-version = "1.58"
description = "host and device communication for Braid triggerbox"

[dependencies]
bbqueue = "0.5.1"
defmt = {version = "0.3.0", optional=true}
log  = {version = "0.4.0", optional=true}
fugit = "0.3.6"

[features]
default = ["std"]

std = ["log"]
thumbv6 = ["bbqueue/thumbv6"]
