[package]
name = "braid-triggerbox-firmware-pico"
version = "0.1.0"
authors = ["Andrew Straw <strawman@astraw.com>"]
license = "MIT/Apache-2.0"
edition = "2021"
rust-version = "1.58"

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
cortex-m-rtic = "1.0.0"
embedded-hal = { version = "0.2.5", features=["unproven"] }
embedded-time = "0.12.0"
num-traits = {version="0.2.14", default-features=false}

defmt = "0.3.0"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
usb-device="0.2.8"
usbd-serial = "0.1.1"

crc = "3.0.0"

rp-pico = "0.2.0"

heapless = "0.7.10"
bbqueue = {version="0.5.1", features=["thumbv6"]}

braid-triggerbox-comms = {path="../../braid-triggerbox-rs/braid-triggerbox-comms", default-features=false, features=["thumbv6"]}
